--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 title: Nithin Bekal
+published: true
 ---
 
 <div id='bio'>
-  Hi there! I'm Nithin. I work at <a href='http://crowdstudio.in'>CrowdStudio</a> and live in Kochi, India. I <a href='http://github.com/nithinbekal'>write code</a>, and occassionally scribble stuff here, or (more frequently) on <a href='http://twitter.com/nithinbekal'>Twitter</a>. Also a <a href='https://www.goodreads.com/user/show/1059476-nithin-bekal'>bibliophile</a>, movie buff and Liverpool FC fanatic.
+  Hi there! I'm Jaseem. Co-founder of <a href="http://crowdstudio.in" target="_blank">CrowdStudio</a>. Frog in a well. Trying to figure out the well.
 </div>
 
 <div class='posts'>
