--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ published: true
 ---
 
 <div id='bio'>
-  Hi there! I'm Jaseem. Co-founder of <a href="http://crowdstudio.in" target="_blank">CrowdStudio</a>. Frog in a well. Trying to figure out the well.
+  Hi there! I'm Jaseem. Co-founder of <a href="http://wowmakers.com" target="_blank">WowMakers</a> and <a href="http://crowdstudio.in" target="_blank">CrowdStudio</a>. Frog in a well. Trying to figure out the well.
 </div>
 
 <div class='posts'>
